--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
       <center><h1>Social Networks<br>
      
-     <a href="whatsapp://send?Enjoy and Celebrate teachers day by visiting https://tanishkapur.github.io/Happy-Teachers-Day/">Send via Whatsapp</a><br></center></h1>
+     <a href="whatsapp://send?text=Enjoy and Celebrate teachers day by visiting https://tanishkapur.github.io/Happy-Teachers-Day/">Send via Whatsapp</a><br></center></h1>
       
 
 
